# CppTemplate

./: .gitmodules  CMakeLists.txt  premake5.lua
src/: app.h  core.h  main.cpp
src/utilities/: log.cpp  log.h
src/utils/: log.h
src/utils/config/: args.cpp  args.h
